# SUPER

./: README.md
mars_uav_sim/mars_quadrotor_msgs/: CMakeLists.txt  package.xml
mars_uav_sim/marsim_render/: CMakeLists.txt  package.xml
mars_uav_sim/perfect_drone_sim/: CMakeLists.txt  package.xml
mars_uav_sim/perfect_drone_sim/config/: benchmark.yaml
mars_uav_sim/perfect_drone_sim/ros/: ros2.CMakeLists.txt
mars_uav_sim/perfect_drone_sim/rviz/: benchmark.rviz  fpv.rviz  top_down.rviz
mission_planner/: CMakeLists.txt  package.xml
mission_planner/Apps/: ros1_waypoint_mission.cpp  ros2_waypoint_mission.cpp
mission_planner/config/: waypoint.yaml
mission_planner/ros/: ros2.CMakeLists.txt
rog_map/: CMakeLists.txt  package.xml
super_planner/: CMakeLists.txt  README.md  package.xml
super_planner/Apps/: fsm_node_ros1.cpp  fsm_node_ros2.cpp
super_planner/config/: static_dense.yaml  static_high_speed.yaml
super_planner/include/TrajectoryOptAdapters/: PolytopeProjectionSolverAdapter.hpp  SuperBackupAuxiliaryStateMap.hpp  SuperBackupIntegralCostAdapter.hpp  SuperExpIntegralCostAdapter.hpp  SuperTrajectoryConversion.hpp
super_planner/include/TrajectoryOptComponents/: LinearTimeCost.hpp  PenaltyUtils.hpp  PolytopeSpatialMap.hpp  SFCCommonTypes.hpp  SuperBackupIntegralCost.hpp  SuperExpIntegralCost.hpp  TimeMapUtils.hpp
super_planner/include/TrajectoryOptComponents/SpatialCosts/: AccelerationBoundPenalty.hpp  AngularRateBoundPenalty.hpp  FlatnessState.hpp  JerkBoundPenalty.hpp  PolytopePositionPenalty.hpp  ScalarBandPenalty.hpp  SegmentBoundaryAttractorPenalty.hpp  SquaredNormBoundPenalty.hpp  ThrustBandPenalty.hpp  TiltAnglePenalty.hpp  VelocityBoundPenalty.hpp  WaypointAttractorPenalty.hpp
super_planner/include/traj_opt/: backup_traj_optimizer_s4.h  exp_traj_optimizer_s4.h  spline_components.hpp  yaw_traj_opt.h
super_planner/launch/: click_demo_dense.launch  click_demo_high_speed.launch  click_demo_smooth.launch
super_planner/ros/: ros1.CMakeLists.txt  ros2.CMakeLists.txt
super_planner/src/traj_opt/: backup_traj_optimizer_s4.cpp  exp_traj_optimizer_s4.cpp
super_planner/src/utils/: geometry_utils.cpp  optimization_utils.cpp
