<?xml version="1.0"?>
<package format="2">
  <name>marsim_render</name>
  <version>0.0.0</version>
  <description>The marsim_render package</description>
  <maintainer email="renyf@connect.hku.hk">Yunfan Ren</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>
